Changes with APR 0.9.4
  *) Add new table function apr_table_compress() and replace
     red-black trees with mergesort in apr_table_overlap()
     [Joe Schaefer <joe+gmane@sunstarsys.com>, Brian Pane]

  *) Win32: Adopt Brian Havard's OS/2 rwlock implementation for
     Windows [Marc Adkins, Bill Stoddard]

  *) Add apr_proc_mutex_lockfile() for retrieving the name of the
     file associated with a mutex.  [Jeff Trawick]

  *) Don't require the lock file name to be passed into 
     apr_proc_mutex_child_init() or apr_global_mutex_child_init().
     This allows child init to work when the lock file was a temp
     file created by APR.  (The problem only occurred with flock-
     based mutexes.)  [Jeff Trawick]

  *) When using a temporary file for flock- and fcntl-based mutexes, 
     don't let the file be deleted on close.  For flock-based mutexes,
     this corrects a fatal problem, since the file would disappear 
     when a program was spawned and cleanup-for-exec was performed, 
     and a subsequent attempt to perform child process mutex 
     initialization would fail.  For fcntl-based mutexes, this was a 
     very minor issue that resulted in a failing unlink() when the 
     file was closed, since fcntl lock initialization always removes 
     the file immediately.  [Jeff Trawick]

  *) When writing to pipes with a timeout set, handle the situation
     where the kernel says the pipe is writable but an attempt to
     write <= PIPE_BUF bytes gets EAGAIN.  APR will now write whatever
     data will fit.  APR applications that relied on the atomic nature
     of relatively small pipe write requests may be affected.
     PR 20295  [Mark Street <mark@faime.demon.co.uk>, Jeff Trawick]

  *) Define _THREAD_SAFE for all compilations on AIX.  Previously
     those of us who used the vendor compiler had it defined
     implicitly and others did not.  The difference became obvious
     with the recent thread safety fixes to apr_password_validate().