@@ -58,6 +58,13 @@
 #include "apr_network_io.h"
 #include "apr_general.h"
 
+typedef struct sock_userdata_t sock_userdata_t;
+struct sock_userdata_t {
+    sock_userdata_t *next;
+    const char *key;
+    void *data;
+};
+
 struct apr_socket_t {
     apr_pool_t         *cntxt;
     SOCKET              socketdes;
@@ -73,6 +80,7 @@ struct apr_socket_t {
     int                 remote_addr_unknown;
     apr_int32_t         netmask;
     apr_int32_t         inherit;
+    sock_userdata_t    *userdata;
 };
 
 #ifdef _WIN32_WCE
